Add 3d lambda, update docs, connect to db with pg
