# product-service/handler.ts
@@ -1,8 +1,10 @@
 import 'source-map-support/register';
 import { getProducts } from './handlers/getProducts';
 import { getProductById } from './handlers/getProductById';
+import { postProduct } from './handlers/postProduct';
 
 export {
   getProducts,
   getProductById,
+  postProduct,
 }
