# product-service/handlers/getProductById.ts
@@ -1,13 +1,19 @@
 import { APIGatewayProxyHandler } from 'aws-lambda';
+import { Client } from 'pg';
 import 'source-map-support/register';
+import { DB_OPTIONS } from '../constants/db-options';
 import { CORS_HEADERS } from '../constants/headers';
-const comics = require('../mocks/comics.json');
+import { handleError } from './error-handlers';
 
 export const getProductById: APIGatewayProxyHandler = async (event, _context) => {
-  console.log('Get by Id event pathParameters:', event.pathParameters);
+  console.log('Get products by Id: event pathParameters', event.pathParameters);
+  const client = new Client(DB_OPTIONS);
+
   try {
+    await client.connect();
     const { id } = event.pathParameters;
-    const item = findBookById(id);
+    const item = await findBookById(client, id);
+
     if (item) {
       return {
         headers: {
@@ -17,28 +23,32 @@ export const getProductById: APIGatewayProxyHandler = async (event, _context) =>
         body: JSON.stringify(item),
       };
     } else {
+      console.log('Get Product by id: product was not found');
+
       return handleNotFound(id);
     }
   } catch (err) {
+    console.log('Get Product by id: unexpected error', err);
+
     return handleError(err);
+  } finally {
+    client.end();
   }
 }
 
-function findBookById(id) {
+async function findBookById(client, id) {
+  const query = {
+    text: `select p.*, s.count from products p 
+    left join stocks s on p.id = s.product_id 
+    where p.id = $1`,
+    values: [id],
+  }
   console.log('Product id:',id);
-  const item = comics.find((book) => { return book.id === id});
-  console.log('Found product:', item);
-  return item;
-}
 
-function handleError(err) {
-  return {
-    headers: {
-      ...CORS_HEADERS,
-    },
-    statusCode: 500,
-    body: err,
-  }
+  const item = await client.query(query.text, query.values);
+  console.log('Found product:', item);
+
+  return item.rows.length && item.rows[0];
 }
 
 function handleNotFound(id: string) {
